[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Sprites/plants.png" type="Texture" id=1]
[ext_resource path="res://Monsters/Enemy.tscn" type="PackedScene" id=2]
[ext_resource path="res://Monsters/Kraken.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Idle"
length = 0.6
loop = true
step = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2 ]
}

[node name="Kraken" instance=ExtResource( 2 )]
script = ExtResource( 3 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 1 )
centered = false
offset = Vector2( -4, -8 )
hframes = 4

[node name="VisionArea" type="Area2D" parent="Sprite" index="0"]
collision_layer = 0
collision_mask = 2

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Sprite/VisionArea" index="0"]
polygon = PoolVector2Array( 0, 0, -47, -51, 47, -51 )

[node name="AnimationPlayer" parent="." index="2"]
autoplay = "Idle"
anims/Idle = SubResource( 1 )

[node name="CooldownTimer" type="Timer" parent="." index="4"]
[connection signal="area_entered" from="Sprite/VisionArea" to="." method="_on_VisionArea_area_entered"]
[connection signal="area_exited" from="Sprite/VisionArea" to="." method="_on_VisionArea_area_exited"]
